--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ background-size: cover
 
 * Be helpful and polite to each other
 
-* Be open-minded to people and technology
+* Be open-minded to (new) people and (new) technology
 
 ]
 
