--- a/index.html
+++ b/index.html
@@ -389,7 +389,9 @@ background-size: cover
 
 .right-column[
 
-* Currently 113 people with merge permissions
+* Currently 122 people with merge permissions
+
+* We were 113 in February 2018
 
 * We were 107 in October 2017
 
