--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -224,7 +224,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -252,7 +252,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -280,7 +280,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -310,7 +310,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -340,7 +340,7 @@ background-size: cover
 * Unite lonely module and tooling authors to a collective
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -373,7 +373,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ---
 
@@ -391,11 +391,11 @@ background-size: cover
 
 * Currently 122 people with merge permissions
 
-* We were 113 in February 2018
+  * We were 113 in February 2018
 
-* We were 107 in October 2017
+  * We were 107 in October 2017
 
-* We were 80 in November 2016
+  * We were 80 in November 2016
 
 * Just a few people work for Puppet Inc.
 
@@ -405,12 +405,33 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
 * only 5 regular contributors work at Puppet Inc, we're independent from the company
 
+---
+
+background-image: url(blue-skies.jpg)
+background-size: cover
+
+## Vox Pupuli
+
+.left-column[
+### What?
+### Who?
+]
+
+.right-column[
+
+##Sience!
+
+![image](contributors.svg)
+
+]
+
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 ---
 
 background-image: url(blue-skies.jpg)
@@ -436,7 +457,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -469,7 +490,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -508,7 +529,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 
 ???
@@ -548,7 +569,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -587,7 +608,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -622,7 +643,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -665,7 +686,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ---
 
@@ -702,7 +723,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -744,7 +765,7 @@ background-size: cover
   * Eric ‘eputnam’ Putnam (works for Puppet Inc.)
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ---
 
@@ -775,7 +796,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ---
 
@@ -796,7 +817,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -823,7 +844,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -848,7 +869,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -875,7 +896,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -902,7 +923,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -929,7 +950,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -955,7 +976,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -980,7 +1001,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -1004,7 +1025,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -1030,7 +1051,7 @@ background-size: cover
   ]
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ???
 
@@ -1139,7 +1160,7 @@ background-size: cover
 
 ]
 
-.footnote[@bastelsblog for @voxpupuliorg]
+.footnote[[@bastelsblog](https://twitter.com/bastelsblog) for [@voxpupuliorg](https://twitter.com/voxpupuliorg)]
 
 ---
 
