update module stats

--- a/index.html
+++ b/index.html
@@ -553,9 +553,11 @@ background-size: cover
 
 .right-column[
 
-* We are managing 92 modules
+* We are managing 105 puppet modules and (155 git repos)
 
-* We had 75 in november 2016
+  * We had 92 modules in February 2018
+
+  * We had 75 modules in November 2016
 
 * modulesync was developed by Puppet Inc, moved to Vox Pupuli
 
