updates updates updates!

--- a/index.html
+++ b/index.html
@@ -1097,6 +1097,62 @@ background-size: cover
 * bastelfreak once added a breaking change to the systemd module which killed the openstack CI pipelines (happened twice)
 
 ---
+
+background-image: url(blue-skies.jpg)
+background-size: cover
+
+
+## Vox Pupuli
+
+.left-column[
+### Daily Business
+### Broken Stuff
+### Quotes
+
+]
+
+.right-column[
+
+* 'Release early - release often' - Igor Galic
+
+]
+
+???
+
+* people are scared about making released because it could break things
+* Maintainers are scared to break the environments from their users
+* release as often as possible. Less changes per release -> less broken releases
+
+---
+
+background-image: url(blue-skies.jpg)
+background-size: cover
+
+
+## Vox Pupuli
+
+.left-column[
+### Daily Business
+### Broken Stuff
+### Quotes
+
+]
+
+.right-column[
+
+* 'Release early - release often' - Igor Galic
+
+* 'Version numbers are cheap - use them' - Igor Galic
+
+]
+
+???
+
+* people are often scared to merge breaking changes. Merging them is totally okay if you do proper versioning
+* we don't delete broken releases and try to fix it, we just do a new release
+
+---
+
 background-image: url(blue-skies.jpg)
 background-size: cover
 
@@ -1122,13 +1178,9 @@ background-size: cover
 
 ???
 
-* people are scared about making released because it could break things
-* release as often as possible. Less changes per release -> less broken releases
-
-* people are often scared to merge breaking changes. Merging them is totally okay if you do proper versioning
-* we don't delete broken releases and try to fix it, we just do a new release
-
 * working closely together, listen to users, always be constructive, don't blame others for mistakes, we all break stuff from time to time
+* the 'listen' gem issue
+
 ---
 
 background-image: url(blue-skies.jpg)
@@ -1194,6 +1246,8 @@ Contact:
 * pmc@voxpupuli.org
 
 * tim@bastelfreak.de
+
+* More talks at [https://github.com/bastelfreak/talks](https://github.com/bastelfreak/talks#collection-of-talks-proposals-and-related-stuff)
 
 ### Thanks for your attention!
 
