add twitter links

--- a/index.html
+++ b/index.html
@@ -1113,7 +1113,7 @@ background-size: cover
 
 .right-column[
 
-* 'Release early - release often' - Igor Galic
+* 'Release early - release often' - [Igor Galic](https://twitter.com/hirojin)
 
 ]
 
@@ -1140,9 +1140,9 @@ background-size: cover
 
 .right-column[
 
-* 'Release early - release often' - Igor Galic
+* 'Release early - release often' - [Igor Galic](https://twitter.com/hirojin)
 
-* 'Version numbers are cheap - use them' - Igor Galic
+* 'Version numbers are cheap - use them' - [Igor Galic](https://twitter.com/hirojin)
 
 ]
 
@@ -1168,11 +1168,11 @@ background-size: cover
 
 .right-column[
 
-* 'Release early - release often' - Igor Galic
+* 'Release early - release often' - [Igor Galic](https://twitter.com/hirojin)
 
-* 'Version numbers are cheap - use them' - Igor Galic
+* 'Version numbers are cheap - use them' - [Igor Galic](https://twitter.com/hirojin)
 
-* 'DevOps is all about empathy' - Rob Nelson
+* 'DevOps is all about empathy' - [Rob Nelson](https://twitter.com/rnelson0)
 
 ]
 
