--- a/index.html
+++ b/index.html
@@ -274,6 +274,16 @@ background-image: url(blue-skies.jpg)
 background-size: cover
 
 .puppetlogo[
+![image](nginx.png)
+![image](apache2.png)
+]
+
+---
+
+background-image: url(blue-skies.jpg)
+background-size: cover
+
+.puppetlogo[
 ![image](puppetconf.jpg)
 ]
 
