--- a/index.html
+++ b/index.html
@@ -1351,7 +1351,7 @@ background-size: cover
 
 Contact:
 
-* IRC #voxpupli on freenode
+* IRC #voxpupuli on freenode
 
 * Slack: #voxpupuli on puppetcommunity.slack.com
 
